total calculation: complete

--- a/enverproxy.conf
+++ b/enverproxy.conf
@@ -39,12 +39,13 @@ mqttport = 1883
 # set total_calculate to calculate the number of active total_calculate and the total sum of power 
 total_calculate = False
 # Number of seconds after which the converter is considered inactive and no longer supplies power
-tatal_TTL = 300
+total_TTL = 300
 
-# to return power per phase on a 3-phase setup, uncomment the forward_phase_map definition and add
+# to return power per phase in a 3-phase setup, uncomment the total_phase_map definition and add
 # your microconverter IDs to the respective phase.
-#forward_phase_map = {
+# total_phase_map is a JSON string. If you provide a multiline string, ensure it is indented accordingly.
+#total_phase_map = {
 #    "L1": [20205555, 20205556],
 #    "L2": [],
 #    "L3": []
-#}
+#  }
